--- a/public/chat.html
+++ b/public/chat.html
@@ -43,12 +43,12 @@
         </section>
     </section>
 
+    <script src="https://apis.google.com/js/platform.js"></script>
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/chat-client.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    <!-- Script Google Sign In -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
+
 
 </html>
